--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   flutter_screenutil: ^5.7.0
   flutter_launcher_icons: ^0.12.0
   flutter_svg: 2.0.2
+  overlay_support: ^2.1.0
 
 
 dev_dependencies:
