--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   flutter_launcher_icons: ^0.12.0
   flutter_svg: 2.0.2
   overlay_support: ^2.1.0
+  intl: ^0.18.1
 
 
 dev_dependencies:
